--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,14 +12,16 @@ services:
     volumes:
       - ./data/conf.d:/etc/mysql/conf.d
       - ./data/logs:/logs
-  #     - /usr/local/var/mysql:/var/lib/mysql
+      - /usr/local/var/mysql:/var/lib/mysql
 
-  # app:
-  #   build: .
-  #   entrypoint: sh -c "npm install && npm run start:dev"
-  #   ports:
-  #     - 3000:3000
-  #   depends_on: 
-  #     - "mysql"
-  #   volumes:
-  #     - .:/home/node/app
+  app:
+    build: .
+    entrypoint: sh -c "npm install && npm run start:dev"
+    env_file: 
+      - .env
+    ports:
+      - 3000:3000
+    depends_on: 
+      - "mysql"
+    volumes:
+      - .:/home/node/app
